# MedsutraAI-main

MedsutraAI-main/: README.md  SETUP.md  pyproject.toml  requirements-dev.txt  requirements.txt
MedsutraAI-main/aws-landing-page/: index.html
MedsutraAI-main/config/: README.md
MedsutraAI-main/database/: README.md  SCHEMA_REFERENCE.md  TASK_2.2_COMPLETION.md  deploy_schema.ps1  deploy_schema.sh  schema.sql
MedsutraAI-main/frontend/: DEPLOYMENT-SUMMARY.md  NEW-FRONTEND-README.md  PACKAGE-COMPLETE.md  demo_app.py  fix_demo_data.py  fix_translations.py  interactive_demo.py  new-index.html  package-for-deployment.sh  styles.css  verify_changes.py  verify_setup.py  web_demo.py
MedsutraAI-main/lambda/: JWT_QUICKSTART.md  JWT_TOKEN_MANAGEMENT.md  README.md  SESSION_MANAGEMENT.md  SESSION_QUICKSTART.md  TASK_3.2_COMPLETION.md  TASK_3.4_COMPLETION.md  deploy.ps1  deploy.sh  deploy_task4.ps1  deploy_task4.sh  validate.ps1  validate.sh
MedsutraAI-main/src/: __init__.py
MedsutraAI-main/terraform/: ARCHITECTURE.md  BEDROCK.md  BEDROCK_QUICKSTART.md  COGNITO.md  COGNITO_QUICKSTART.md  DYNAMODB.md  DYNAMODB_QUICKSTART.md  KMS.md  QUICKSTART.md  RDS.md  RDS_MVP_QUICKSTART.md  README.md  S3.md  S3_CONFIGURATION.md  SECURITY_GROUPS.md  TASK_1.1_COMPLETION.md  TASK_1.2_COMPLETION.md  TASK_1.3_COMPLETION.md  TASK_2.1_COMPLETION.md  TASK_2.3_COMPLETION.md  TASK_3.1_COMPLETION.md  TASK_4_COMPLETION.md  TASK_7.3_COMPLETION.md  api_gateway.tf  backend.tfvars.example  bedrock.tf  cognito.tf  dynamodb.tf  kms.tf  lambda_authorizer.tf  lambda_patient_service.tf  lambda_report_service.tf  (+28 more)
(+47 files in other folders)
